A reworking of the CMake build system, more modular and re-defining of a few aspects of Wintermute.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,17 @@
 project(Wintermute)
-set(PROJECT_LABEL "Wintermute Core")
 cmake_minimum_required(VERSION 2.8)
-set(WINTERMUTE_MAJOR_VERSION 0)
-set(WINTERMUTE_MINOR_VERSION 1)
-set(WINTERMUTE_VERSION "${WINTERMUTE_MAJOR_VERSION}.${WINTERMUTE_MINOR_VERSION}")
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 ## Modules
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules")
 
-## Wintermute SDK
+set(PROJECT_LABEL "Wintermute Core")
+set(WINTERMUTE_MAJOR_VERSION 0)
+set(WINTERMUTE_MINOR_VERSION 1)
+set(WINTERMUTE_VERSION "${WINTERMUTE_MAJOR_VERSION}.${WINTERMUTE_MINOR_VERSION}")
+
+## Wintermute-specific macros
 include(WintermuteDefaults)
 include(WintermuteMacros)
-
-## Default build type
-if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE ${WINTER_BUILD_TYPE})
-endif()
 
 ## Install prefix
 set(CMAKE_INSTALL_PREFIX "/usr")
@@ -35,9 +30,6 @@ find_package(Qt4 COMPONENTS
 
 include("${QT_USE_FILE}")
 
-## Files
-file(GLOB WINTER_CMAKE_MODULES "${PROJECT_SOURCE_DIR}/cmake/Modules/*.cmake")
-
 ## Main variables
 set(VS_KEYWORD Qt4VSv1.0)
 set(VS_SCC_PROJECTNAME "Wintermute Core")
@@ -52,37 +44,16 @@ set(WINTERMUTE_LIBRARIES
     ${Boost_LIBRARIES}
     ${QT_LIBRARIES})
 set(WINTERMUTE_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/share/cmake/Wintermute" CACHE PATH "CMake directory.")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -O1")
 
 ## Include directories
 include_directories(${WINTERMUTE_INCLUDE_DIRS})
-include_directories(${PROJECT_BINARY_DIR})
-
-list(APPEND WINTERMUTE_INCLUDE_DIRS ${WINTERMUTE_INCLUDE_DIR})
-
-## Configs
-configure_file("${PROJECT_SOURCE_DIR}/cmake/WintermuteConfig.cmake.in"
-               "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfig.cmake" @ONLY)
-
-configure_file("${PROJECT_SOURCE_DIR}/cmake/WintermuteConfigVersion.cmake.in"
-               "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfigVersion.cmake" @ONLY)
-
-configure_file("${PROJECT_SOURCE_DIR}/config.hpp.in"
-               "${PROJECT_BINARY_DIR}/src/config.hpp" @ONLY)
-
-## D-Bus configuration
-dbus_add_activation_service(services/org.thesii.Wintermute.service.in)
 
 add_subdirectory(src)
-add_subdirectory(cmake/Modules)
+add_subdirectory(cmake)
+add_subdirectory(services)
 
 ## Doxygen
 enable_doxygen("${PROJECT_BINARY_DIR}/doc")
-
-## Installs
-install(FILES "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfig.cmake"
-              "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfigVersion.cmake"
-        DESTINATION "${WINTERMUTE_CMAKE_DIR}")
 
 ## @todo Add it to a system-wide location.
 install(FILES "${PROJECT_SOURCE_DIR}/Wintermute.conf"
