--- a/cmake/WintermuteConfig.cmake.in
+++ b/cmake/WintermuteConfig.cmake.in
@@ -1,10 +1,10 @@
-# - Config file for the WINTERMUTE package
+# - Config file for the Wintermute package.
 # It defines the following variables
 #  WINTERMUTE_INCLUDE_DIRS - include directories for WINTERMUTE
 #  WINTERMUTE_LIBRARY_DIRS - library directories for WINTERMUTE (normally not used!)
 
 # Tell the user project where to find our headers and libraries
-set(WINTERMUTE_INCLUDE_DIRS "@WINTERMUTE_INCLUDE_DIRS@")
+set(WINTERMUTE_INCLUDE_DIRS "@WINTERMUTE_INCLUDE_DIRS@" "@WINTERMUTE_INCLUDE_DIR@")
 set(WINTERMUTE_LIBRARIES "@WINTERMUTE_LIBRARIES@")
 set(WINTERMUTE_LIBRARY_DIRS "@WINTERMUTE_LIB_DIR@")
 
