--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,8 @@ project(WintermuteApplication)
 include(WintermuteDefaults)
 include(WintermuteMacros)
 
+set(WINTERMUTE_COMPILE_DEFINITIONS )
+set(WINTERMUTE_COMPILE_FLAGS "--std=c++0x -Wall -Wextra")
 configure_file("${PROJECT_SOURCE_DIR}/config.hpp.in"
                "${PROJECT_SOURCE_DIR}/config.hpp" @ONLY)
 
@@ -13,6 +15,9 @@ QT4_WRAP_CPP(WINTERMUTE_SOURCES "${WINTERMUTE_HEADERS}")
 ## Targets
 add_executable(wintermute ${WINTERMUTE_SOURCES})
 target_link_libraries(wintermute ${WINTERMUTE_LIBRARIES})
+set_target_properties(wintermute PROPERTIES
+    COMPILE_DEFINITIONS ${WINTERMUTE_COMPILE_DEFINITIONS}
+    COMPILE_FLAGS ${WINTERMUTE_COMPILE_FLAGS})
 
 ## Installs
 install(TARGETS wintermute
