--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,7 @@ QT4_WRAP_CPP(WINTERMUTE_SOURCES "${WINTERMUTE_HEADERS}")
 add_executable(wintermute ${WINTERMUTE_SOURCES})
 target_link_libraries(wintermute ${WINTERMUTE_LIBRARIES})
 set_target_properties(wintermute PROPERTIES
-    COMPILE_DEFINITIONS ${WINTERMUTE_COMPILE_DEFINITIONS}
+    COMPILE_DEFINITIONS "${WINTERMUTE_COMPILE_DEFINITIONS}"
     COMPILE_FLAGS ${WINTERMUTE_COMPILE_FLAGS})
 
 ## Installs
