Formatting changes. And added a project-wide uninstall target.

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 2.8)
 
 add_subdirectory(services)
 
-install(FILES "${PROJECT_SOURCE_DIR}/Wintermute.conf"
+install(FILES "Wintermute.conf"
         DESTINATION "~/.config/Synthetic Intellect Institute")
