--- a/src/config.hpp.in
+++ b/src/config.hpp.in
@@ -1,19 +1,19 @@
-/**
- * @author Wintermute Developers <wintermute-devel@lists.launchpad.net>
+/***
+ * @author Jacky Alcine <jacky.alcine@thesii.org>
  * @file   config.hpp
  *
  * @legalese
  * Wintermute is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Library General Public
+ * modify it under the terms of the GNU General Public
  * License as published by the Free Software Foundation; either
  * version 3 of the License, or (at your option) any later version.
  *
  * Wintermute is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Library General Public License for more details.
+ * General Public License for more details.
  *
- * You should have received a copy of the GNU Library General Public
+ * You should have received a copy of the GNU General Public
  * License along with Wintermute; if not, write to the
  * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.
@@ -57,4 +57,4 @@
 
 #endif // __CONFIG_HPP__
 
-// kate: indent-mode cstyle; space-indent on; indent-width 4;
+// kate: indent-mode cstyle; indent-width 4; replace-tabs on; 
