--- a/cmake/WintermuteConfig.cmake.in
+++ b/cmake/WintermuteConfig.cmake.in
@@ -8,3 +8,5 @@ set(WINTERMUTE_INCLUDE_DIRS "@WINTERMUTE_INCLUDE_DIRS@" "@WINTERMUTE_INCLUDE_DIR
 set(WINTERMUTE_LIBRARIES "@WINTERMUTE_LIBRARIES@")
 set(WINTERMUTE_LIBRARY_DIRS "@WINTERMUTE_LIB_DIR@")
 
+set(WINTERMUTE_COMPILE_FLAGS "@WINTERMUTE_COMPILE_FLAGS@")
+set(WINTEMRUTE_COMPILE_DEFINITIONS "@WINTERMUTE_COMPILE_DEFINITONS@")
