Updated documentation system. Revamped code a bit to meet the C++0x standard.

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 add_subdirectory(services)
+add_subdirectory(res)
 
 install(FILES "Wintermute.conf"
         DESTINATION "~/.config/Synthetic Intellect Institute")
