--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,11 @@
+cmake_minimum_required(VERSION 2.8)
 project(WintermuteApplication)
 
 include(WintermuteDefaults)
 include(WintermuteMacros)
 
-set(WINTERMUTE_COMPILE_DEFINITIONS )
-set(WINTERMUTE_COMPILE_FLAGS "--std=c++0x -Wall -Wextra -Wabi -ggdb")
-configure_file("${PROJECT_SOURCE_DIR}/config.hpp.in"
-               "${PROJECT_SOURCE_DIR}/config.hpp" @ONLY)
+configure_file("config.hpp.in"
+               "config.hpp" @ONLY)
 
 file(GLOB WINTERMUTE_SOURCES "*.cpp")
 file(GLOB WINTERMUTE_HEADERS "*.hpp")
