--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,7 @@ cmake_minimum_required(VERSION 2.8)
 ## Modules
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules")
 
-set(PROJECT_LABEL "Wintermute Core")
-set(WINTERMUTE_MAJOR_VERSION 0)
-set(WINTERMUTE_MINOR_VERSION 1)
-set(WINTERMUTE_VERSION "${WINTERMUTE_MAJOR_VERSION}.${WINTERMUTE_MINOR_VERSION}")
+option(WITH_GUI_SUPPORT     "Determines if Wintermute is built with QtGui support." ON)
 
 ## Wintermute-specific macros
 include(WintermuteDefaults)
@@ -33,8 +30,10 @@ include("${QT_USE_FILE}")
 ## Main variables
 set(VS_KEYWORD Qt4VSv1.0)
 set(VS_SCC_PROJECTNAME "Wintermute Core")
-set(PROJECT_LOGO    "${PROJECT_SOURCE_DIR}/res/WintermuteLogo.png")
-set(PROJECT_DOC_CSS "${PROJECT_SOURCE_DIR}/res/doc.css")
+set(PROJECT_LABEL "Wintermute Core")
+set(WINTERMUTE_MAJOR_VERSION 0)
+set(WINTERMUTE_MINOR_VERSION 1)
+set(WINTERMUTE_VERSION "${WINTERMUTE_MAJOR_VERSION}.${WINTERMUTE_MINOR_VERSION}")
 set(WINTERMUTE_INCLUDE_DIR "${WINTER_INCLUDE_INSTALL_DIR}")
 set(WINTERMUTE_INCLUDE_DIRS
     ${Boost_INCLUDE_DIRS}
@@ -42,14 +41,20 @@ set(WINTERMUTE_INCLUDE_DIRS
     ${WINTER_PLUGIN_INCLUDE_INSTALL_DIR})
 set(WINTERMUTE_LIBRARIES
     ${Boost_LIBRARIES}
-    ${QT_LIBRARIES})
+    ${QT_QTCORE_LIBRARY}
+    ${QT_QTDBUS_LIBRARY})
+
+if (WITH_GUI_SUPPORT)
+    list(APPEND WINTERMUTE_LIBRARIES ${QT_QTGUI_LIBRARY})
+    message(STATUS "Enabled GUI support in Wintermute.")
+else (WITH_GUI_SUPPORT)
+    list(REMOVE_ITEM WINTERMUTE_LIBRARIES ${QT_QTGUI_LIBRARY})
+    message(STATUS "Disabled GUI support in Wintermute.")
+endif (WITH_GUI_SUPPORT)
 
 ## Include directories
 include_directories(${WINTERMUTE_INCLUDE_DIRS})
 
-add_subdirectory(src)
 add_subdirectory(cmake)
+add_subdirectory(src)
 add_subdirectory(data)
-
-## Doxygen
-enable_doxygen("${PROJECT_BINARY_DIR}/doc")
