--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -12,5 +12,6 @@ configure_file("${PROJECT_SOURCE_DIR}/cmake/WintermuteConfigVersion.cmake.in"
 install(FILES "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfig.cmake"
               "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfigVersion.cmake"
               "${PROJECT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
+              "${PROJECT_SOURCE_DIR}/cmake/Doxyfile.in"
         DESTINATION "${WINTER_CMAKE_DIR}")
 
