--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 add_subdirectory(app)
-add_subdirectory(plugins)
+
+if (WITH_PLUGINS)
+    add_subdirectory(plugins)
+endif(WITH_PLUGINS)
