Toggled the addition of GUI support.

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -7,9 +7,13 @@ include(WintermuteMacros)
 file(GLOB WINTERMUTE_SOURCES "*.cpp")
 file(GLOB WINTERMUTE_HEADERS "*.hpp")
 
-set(WINTERMUTE_BUILD_INCLUDE_DIRS ${WINTERMUTE_INCLUDE_DIRS}
-    "${PROJECT_BINARY_DIR}"
-    "${PROJECT_SOURCE_DIR}")
+if (WITH_GUI_SUPPORT)
+    list(APPEND WINTERMUTE_LIBRARIES ${QT_QTGUI_LIBRARY})
+    message(STATUS "Enabled GUI support in Wintermute.")
+else (WITH_GUI_SUPPORT)
+    list(REMOVE_ITEM WINTERMUTE_LIBRARIES ${QT_QTGUI_LIBRARY})
+    message(STATUS "Disabled GUI support in Wintermute.")
+endif (WITH_GUI_SUPPORT)
 
 include_directories(${WINTERMUTE_BUILD_INCLUDE_DIRS})
 
@@ -27,9 +31,9 @@ set_target_properties(wintermute PROPERTIES
 
 ## Installs
 install(TARGETS wintermute
-        RUNTIME DESTINATION "${WINTER_BIN_INSTALL_DIR}"
-        COMPONENT bin)
+    RUNTIME DESTINATION "${WINTER_BIN_INSTALL_DIR}"
+    COMPONENT bin)
 
 install(FILES ${WINTERMUTE_HEADERS}
-        DESTINATION "${WINTER_INCLUDE_INSTALL_DIR}"
-        COMPONENT dev)
+    DESTINATION "${WINTER_INCLUDE_INSTALL_DIR}"
+    COMPONENT dev)
