Formatting and linking to QtGui library.

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -7,9 +7,16 @@ include(WintermuteMacros)
 file(GLOB WINTERMUTE_SOURCES "*.cpp")
 file(GLOB WINTERMUTE_HEADERS "*.hpp")
 
+set(WINTERMUTE_APP_LIBRARIES ${WINTERMUTE_LIBRARIES})
 set(WINTERMUTE_BUILD_INCLUDE_DIRS ${WINTERMUTE_INCLUDE_DIRS}
     "${PROJECT_BINARY_DIR}"
     "${PROJECT_SOURCE_DIR}")
+
+if (WITH_GUI)
+    list(APPEND WINTERMUTE_APP_LIBRARIES "${QT_QTGUI_LIBRARY}")
+else (WITH_GUI)
+    list(REMOVE_ITEM WINTERMUTE_APP_LIBRARIES "${QT_QTGUI_LIBRARY}")
+endif(WITH_GUI)
 
 include_directories(${WINTERMUTE_BUILD_INCLUDE_DIRS})
 
@@ -20,7 +27,7 @@ QT4_AUTOMOC(${WINTERMUTE_SOURCES})
 
 ## Targets
 add_executable(wintermute ${WINTERMUTE_SOURCES})
-target_link_libraries(wintermute ${WINTERMUTE_LIBRARIES})
+target_link_libraries(wintermute ${WINTERMUTE_APP_LIBRARIES})
 set_target_properties(wintermute PROPERTIES
     COMPILE_DEFINITIONS "${WINTERMUTE_COMPILE_DEFINITIONS}"
     COMPILE_FLAGS ${WINTERMUTE_COMPILE_FLAGS})
