--- a/src/plugins/ntwk-api/cmake/WntrNtwkConfig.cmake.in
+++ b/src/plugins/ntwk-api/cmake/WntrNtwkConfig.cmake.in
@@ -13,3 +13,7 @@ include("@WNTRNTWK_CMAKE_DIR@/WntrNtwkLibraryDepends.cmake")
 
 # These are IMPORTED targets created by WntrNtwkLibraryDepends.cmake
 set(WNTRNTWK_LIBRARIES wplugin-network)
+
+if (WINTER_PLUGINS_BUILDING)
+    list(APPEND WNTRNTWK_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/src/plugins/ntwk-api/src")
+endif (WINTER_PLUGINS_BUILDING)
