Reorganized WntrData's files and build system.
Well, this came about largely due to a incapability to build against locally
built libraries within the build system to use for other APIs (i.e.: WntrLing
to WntrData).

--- a/src/plugins/data-api/CMakeLists.txt
+++ b/src/plugins/data-api/CMakeLists.txt
@@ -21,7 +21,7 @@ include(WintermuteDefaults)
 set(VS_KEYWORD Qt4VSv1.0)
 set(VS_SCC_PROJECTNAME "Wintermute Database")
 set(PROJECT_LABEL "Wintermute Database")
-set(WNTRDATA_DATA_DIR "${WINTER_PLUGIN_DATA_INSTALL_DIR}/data" CACHE PATH "The directory where Wintermute's data files will be installed.")
+set(WNTRDATA_DATA_DIR "${WINTER_PLUGIN_DATA_INSTALL_DIR}/data-api" CACHE PATH "The directory where Wintermute's data files will be installed.")
 set(WNTRDATA_LING_DIR "ling" CACHE PATH "The name of the folder that contains the linguistics information. There should be no trailing or leading slashes.")
 set(WNTRDATA_ONTO_DIR "onto" CACHE PATH "The name of the folder that contains the ontology information. There should be no trailing or leading slashes.")
 set(WNTRDATA_INCLUDE_DIR "${WINTER_PLUGIN_INCLUDE_INSTALL_DIR}/data")
@@ -41,6 +41,5 @@ set(WNTRDATA_LIBRARIES "${PYTHON_LIBRARIES}"
 set(WNTRDATA_COMPILE_DEFINTIONS ${WINTERMUTE_COMPILE_DEFINITIONS})
 set(WNTRDATA_COMPILE_FLAGS ${WINTERMUTE_COMPILE_FLAGS})
 
-add_subdirectory(src)
-add_subdirectory(data)
-add_subdirectory(cmake)
+wntrplugin_add_data("data-api")
+include(data-api.cmake)
