--- a/src/plugins/data-api/config.hpp.in
+++ b/src/plugins/data-api/config.hpp.in
@@ -20,7 +20,7 @@
  * Boston, MA 02111-1307, USA.
  */
 
-#include <config.hpp>
+#include <app/config.hpp>
 
 #cmakedefine01 DEBUG
 
@@ -31,4 +31,4 @@
 
 #define WNTRDATA_DBUS_SERVICE WNTR_DBUS_PLUGIN_NAME".@WNTRDATA_UUID@"
 
-// kate: indent-mode cstyle; indent-width 4; replace-tabs on; 
+// kate: indent-mode cstyle; indent-width 4; replace-tabs on;
