Reorganized the layout of files for the Linguistics API.

--- a/src/plugins/linguistics-api/CMakeLists.txt
+++ b/src/plugins/linguistics-api/CMakeLists.txt
@@ -18,7 +18,7 @@ include(WintermuteMacros)
 include(WintermuteDefaults)
 
 ## Variables
-set(WNTRLING_INCLUDE_DIR "${WINTER_PLUGIN_INCLUDE_INSTALL_DIR}/linguistics" CACHE PATH "Includes directory.")
+set(WNTRLING_INCLUDE_DIR "${WINTER_PLUGIN_INCLUDE_INSTALL_DIR}/linguistics-api" CACHE PATH "Includes directory.")
 set(WNTRLING_LIB_DIR "${WINTER_PLUGIN_INSTALL_DIR}" CACHE PATH "Libraries directory.")
 set(WNTRLING_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/share/cmake/WntrLing" CACHE PATH "CMake directory.")
 set(WNTRLING_INCLUDE_DIRS "${WINTERMUTE_INCLUDE_DIRS}"
@@ -31,8 +31,6 @@ set(WNTRLING_COMPILE_DEFINTIONS ${WINTERMUTE_COMPILE_DEFINITIONS})
 set(WNTRLING_COMPILE_FLAGS ${WINTERMUTE_COMPILE_FLAGS})
 
 include_directories(${WNTRLING_INCLUDE_DIRS})
-message(${WNTRLING_INCLUDE_DIRS})
 
-add_subdirectory(cmake)
-add_subdirectory(data)
-add_subdirectory(src)
+wntrplugin_add_data("linguistics-api")
+include(linguistics-api.cmake)
