Reorganized WntrNtwk's data.

--- a/cmake/plugins/network-api/WntrNtwkConfig.cmake.in
+++ b/cmake/plugins/network-api/WntrNtwkConfig.cmake.in
@@ -12,7 +12,7 @@ set(WNTRNTWK_LIBRARY_DIRS "@WNTRNTWK_LIB_DIR@")
 include("@WNTRNTWK_CMAKE_DIR@/WntrNtwkLibraryDepends.cmake")
 
 # These are IMPORTED targets created by WntrNtwkLibraryDepends.cmake
-set(WNTRNTWK_LIBRARIES wplugin-network)
+set(WNTRNTWK_LIBRARIES wapi-network)
 
 if (WINTER_PLUGINS_BUILDING)
     list(APPEND WNTRNTWK_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/src/plugins/ntwk-api/src")
