--- a/src/plugins/network-api/CMakeLists.txt
+++ b/src/plugins/network-api/CMakeLists.txt
@@ -21,7 +21,7 @@ find_package(QCA REQUIRED)
 set(VS_KEYWORD Qt4VSv1.0)
 set(VS_SCC_PROJECTNAME "Wintermute Network")
 set(NTWK_BROADCAST_INTERVAL 200)
-set(WNTRNTWK_INCLUDE_DIR "${WINTER_PLUGIN_INCLUDE_INSTALL_DIR}/network" CACHE PATH "Includes directory.")
+set(WNTRNTWK_INCLUDE_DIR "${WINTER_PLUGIN_INCLUDE_INSTALL_DIR}/network-api" CACHE PATH "Includes directory.")
 set(WNTRNTWK_LIB_DIR "${WINTER_PLUGIN_INSTALL_DIR}" CACHE PATH "Library install directory.")
 set(WNTRNTWK_INCLUDE_DIRS "${WNTRNTWK_INCLUDE_DIR}"
         ${Boost_INCLUDE_DIR}
