--- a/src/plugins/network-api/config.hpp.in
+++ b/src/plugins/network-api/config.hpp.in
@@ -1,4 +1,4 @@
-/**
+/*
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
  * License as published by the Free Software Foundation; either
@@ -13,11 +13,14 @@
  * License along with this library; if not, write to the
  * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.
-
+*/
+/*
  * @file config.hpp
  * @author Wintermute Development <wntr-devel@thesii.org>
  * @date October 29, 2011, 3:32 PM
  */
 
+#include <app/config.hpp>
+
 #define WNTRNTWK_BROADCAST_INTERVAL @NTWK_BROADCAST_INTERVAL@
-// kate: indent-mode cstyle; indent-width 4; replace-tabs on; 
+// kate: indent-mode cstyle; indent-width 4; replace-tabs on;
