Removed the use of the automatic Qt inclusion file and made it more specific, thus potentially reducing overhead and mistaken includes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,6 @@ find_package(Qt4 ${WINTER_QT_VERSION} COMPONENTS
     QtDBus
     REQUIRED)
 
-include("${QT_USE_FILE}")
-
 ## Main variables
 set(VS_KEYWORD Qt4VSv1.0)
 set(VS_SCC_PROJECTNAME "Wintermute")
@@ -37,7 +35,9 @@ set(WINTERMUTE_VERSION "${WINTERMUTE_MAJOR_VERSION}.${WINTERMUTE_MINOR_VERSION}"
 set(WINTERMUTE_INCLUDE_DIR "${WINTER_INCLUDE_INSTALL_DIR}")
 set(WINTERMUTE_INCLUDE_DIRS
     ${Boost_INCLUDE_DIRS}
-    ${QT_INCLUDE_DIRS}
+    ${QT_INCLUDE_DIR}
+    ${QT_QTCORE_INCLUDE_DIR}
+    ${QT_QTDBUS_INCLUDE_DIR}
     ${WINTER_PLUGIN_INCLUDE_INSTALL_DIR})
 set(WINTERMUTE_LIBRARIES
     ${Boost_LIBRARIES}
