Picking up private data and fixed includes+libraries.

--- a/src/plugins/network-api/CMakeLists.txt
+++ b/src/plugins/network-api/CMakeLists.txt
@@ -23,16 +23,16 @@ set(VS_SCC_PROJECTNAME "Wintermute Network")
 set(NTWK_BROADCAST_INTERVAL 200)
 set(WNTRNTWK_INCLUDE_DIR "${WINTER_PLUGIN_INCLUDE_INSTALL_DIR}/network-api" CACHE PATH "Includes directory.")
 set(WNTRNTWK_LIB_DIR "${WINTER_PLUGIN_INSTALL_DIR}" CACHE PATH "Library install directory.")
-set(WNTRNTWK_INCLUDE_DIRS "${WNTRNTWK_INCLUDE_DIR}"
-        ${Boost_INCLUDE_DIR}
+set(WNTRNTWK_INCLUDE_DIRS ${WNTRNTWK_INCLUDE_DIR}
+        ${WINTERMUTE_INCLUDE_DIRS}
         ${QJSON_INCLUDE_DIR}
         ${QCA_INCLUDE_DIRS}
-        ${WINTERMUTE_INCLUDE_DIRS}
-        ${PYTHON_INCLUDE_DIRS})
-set(WNTRNTWK_LIBRARIES ${QT_QTNETWORK_LIBRARY}
+        ${QT_QTNETWORK_INCLUDE_DIR})
+set(WNTRNTWK_LIBRARIES ${WINTERMUTE_LIBRARIES}
+        ${QT_QTNETWORK_LIBRARY}
         ${QJSON_LIBRARIES}
         ${QCA_LIBRARIES}
-        ${WINTERMUTE_LIBRARIES})
+        ${QT_QTNETWORK_LIBRARY})
 set(WNTRNTWK_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/share/cmake/WntrNtwk" CACHE PATH "CMake directory.")
 set(WNTRNTWK_COMPILE_DEFINTIONS ${WINTERMUTE_COMPILE_DEFINITIONS})
 set(WNTRNTWK_COMPILE_FLAGS ${WINTERMUTE_COMPILE_FLAGS})
