Implemented a private variable for building includes and added QtGui includes+libraries.

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -8,17 +8,21 @@ file(GLOB WINTERMUTE_SOURCES "*.cpp" "*.cxx")
 file(GLOB WINTERMUTE_HEADERS "*.hpp" "*.hxx")
 
 set(WINTERMUTE_APP_LIBRARIES ${WINTERMUTE_LIBRARIES})
-set(WINTERMUTE_BUILD_INCLUDE_DIRS ${WINTERMUTE_INCLUDE_DIRS}
-    "${PROJECT_BINARY_DIR}"
-    "${PROJECT_SOURCE_DIR}")
+set(WINTERMUTE_APP_INCLUDE_DIRS ${WINTERMUTE_INCLUDE_DIRS})
 
 if (WITH_GUI)
     list(APPEND WINTERMUTE_APP_LIBRARIES "${QT_QTGUI_LIBRARY}")
+    list(APPEND WINTERMUTE_APP_INCLUDE_DIRS "${QT_QTGUI_INCLUDE_DIR}")
 else (WITH_GUI)
     list(REMOVE_ITEM WINTERMUTE_APP_LIBRARIES "${QT_QTGUI_LIBRARY}")
+    list(REMOVE_ITEM WINTERMUTE_APP_INCLUDE_DIRS "${QT_QTGUI_INCLUDE_DIR}")
 endif(WITH_GUI)
 
-include_directories(${WINTERMUTE_BUILD_INCLUDE_DIRS})
+set(WINTERMUTE_APP_BUILD_INCLUDE_DIRS ${WINTERMUTE_APP_INCLUDE_DIRS}
+    "${PROJECT_BINARY_DIR}"
+    "${PROJECT_SOURCE_DIR}")
+
+include_directories(${WINTERMUTE_APP_BUILD_INCLUDE_DIRS})
 
 ## Configures
 configure_file("config.hpp.in" "config.hpp" @ONLY)
