--- a/src/app/config.hpp.in
+++ b/src/app/config.hpp.in
@@ -44,10 +44,10 @@
 
 // Plug-in System Data
 #define WNTR_PLUGIN_PATH "@WINTER_PLUGIN_INSTALL_DIR@"
-#define WNTR_PLUGINSPEC_PATH "@WINTER_PLUGINSPEC_INSTALL_DIR@"
+#define WNTR_PLUGINSPEC_PATH "@WINTER_PLUGIN_SPEC_INSTALL_DIR@"
 
 // Build-time Configuration
-#define WNTR_LOCALE "@WINTERMUTE_LOCALE@"
+#define WNTR_LOCALE "@WINTER_LOCALE@"
 #define WNTR_DATA_DIR "@WINTER_DATA_INSTALL_DIR@"
 #define WNTR_WITH_GUI @WITH_GUI_SUPPORT@
 
