--- a/src/plugins/data-api/CMakeLists.txt
+++ b/src/plugins/data-api/CMakeLists.txt
@@ -7,6 +7,7 @@ set(WNTRDATA_MAJOR_VERSION 0)
 set(WNTRDATA_MINOR_VERSION 1)
 set(WNTRDATA_UUID "a9b6b020-f4f2-11e0-be50-0800200c9a66")
 set(WNTRDATA_VERSION ${WNTRDATA_MAJOR_VERSION}.${WNTRDATA_MINOR_VERSION})
+set(WNTRDATA_SOVERSION ${WNTRDATA_VERSION})
 
 ## Packages
 find_package(Wintermute 0.1 REQUIRED)
@@ -18,7 +19,6 @@ include(WintermuteMacros)
 include(WintermuteDefaults)
 
 ## Main variables
-set(VS_KEYWORD Qt4VSv1.0)
 set(VS_SCC_PROJECTNAME "Wintermute Database")
 set(PROJECT_LABEL "Wintermute Database")
 set(WNTRDATA_DATA_DIR "${WINTER_PLUGIN_DATA_INSTALL_DIR}/data-api" CACHE PATH "The directory where Wintermute's data files will be installed.")
@@ -26,14 +26,14 @@ set(WNTRDATA_LING_DIR "ling" CACHE PATH "The name of the folder that contains th
 set(WNTRDATA_ONTO_DIR "onto" CACHE PATH "The name of the folder that contains the ontology information. There should be no trailing or leading slashes.")
 set(WNTRDATA_INCLUDE_DIR "${WINTER_PLUGIN_INCLUDE_INSTALL_DIR}/data")
 set(WNTRDATA_INCLUDE_DIRS ${WINTERMUTE_INCLUDE_DIRS}
-        ${QT_QTXML_INCLUDE_DIR}
-        ${SOPRANO_INCLUDE_DIR}
-        ${qjson_INCLUDE_DIR})
+    ${QT_QTXML_INCLUDE_DIR}
+    ${SOPRANO_INCLUDE_DIR}
+    ${qjson_INCLUDE_DIR})
 set(WNTRDATA_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/share/cmake/WntrData")
 set(WNTRDATA_LIBRARIES ${WINTERMUTE_LIBRARIES}
-        ${QT_QTXML_LIBRARY}
-        ${SOPRANO_LIBRARIES}
-        ${qjson_LIBRARIES})
+    ${QT_QTXML_LIBRARY}
+    ${SOPRANO_LIBRARIES}
+    ${qjson_LIBRARIES})
 set(WNTRDATA_COMPILE_DEFINTIONS ${WINTERMUTE_COMPILE_DEFINITIONS})
 set(WNTRDATA_COMPILE_FLAGS ${WINTERMUTE_COMPILE_FLAGS})
 
