--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,22 +7,20 @@ include(WintermuteMacros)
 file(GLOB WINTERMUTE_SOURCES "*.cpp")
 file(GLOB WINTERMUTE_HEADERS "*.hpp")
 
-set(WINTERMUTE_APP_LIBRARIES ${WINTERMUTE_LIBRARIES})
-set(WINTERMUTE_APP_INCLUDE_DIRS ${WINTERMUTE_INCLUDE_DIRS})
+include("${QT_USE_FILE}")
 
-if (WITH_GUI)
-    list(APPEND WINTERMUTE_APP_LIBRARIES "${QT_QTGUI_LIBRARY}")
-    list(APPEND WINTERMUTE_APP_INCLUDE_DIRS "${QT_QTGUI_INCLUDE_DIR}")
-else (WITH_GUI)
-    list(REMOVE_ITEM WINTERMUTE_APP_LIBRARIES "${QT_QTGUI_LIBRARY}")
-    list(REMOVE_ITEM WINTERMUTE_APP_INCLUDE_DIRS "${QT_QTGUI_INCLUDE_DIR}")
-endif(WITH_GUI)
+set(WINTERMUTE_INCLUDE_DIR "${WINTER_INCLUDE_INSTALL_DIR}")
+set(WINTERMUTE_INCLUDE_DIRS
+    ${Boost_INCLUDE_DIRS}
+    ${QT_INCLUDES}
+    ${WINTER_PLUGIN_INCLUDE_INSTALL_DIR})
+set(WINTERMUTE_LIBRARIES
+    ${Boost_LIBRARIES}
+    ${QT_LIBRARIES})
+set(WINTERMUTE_BUILD_INCLUDE_DIRS ${WINTERMUTE_INCLUDE_DIRS}
+    "${PROJECT_BINARY_DIR}" "${PROJECT_SOURCE_DIR}")
 
-set(WINTERMUTE_APP_BUILD_INCLUDE_DIRS ${WINTERMUTE_APP_INCLUDE_DIRS}
-    "${PROJECT_BINARY_DIR}"
-    "${PROJECT_SOURCE_DIR}")
-
-include_directories(${WINTERMUTE_APP_BUILD_INCLUDE_DIRS})
+include_directories(${WINTERMUTE_BUILD_INCLUDE_DIRS})
 
 ## Configures
 configure_file("config.hpp.in" "config.hpp" @ONLY)
@@ -31,7 +29,7 @@ QT4_AUTOMOC(${WINTERMUTE_SOURCES})
 
 ## Targets
 add_executable(wintermute ${WINTERMUTE_SOURCES})
-target_link_libraries(wintermute ${WINTERMUTE_APP_LIBRARIES})
+target_link_libraries(wintermute ${WINTERMUTE_LIBRARIES})
 set_target_properties(wintermute PROPERTIES
     COMPILE_DEFINITIONS "${WINTERMUTE_COMPILE_DEFINITIONS}"
     COMPILE_FLAGS ${WINTERMUTE_COMPILE_FLAGS})
