--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
+set(WINTERMUTE_BASE_APPLICATION "yoo")
 add_subdirectory(Modules)
 
 configure_file("${PROJECT_SOURCE_DIR}/cmake/WintermuteConfig.cmake.in"
@@ -11,4 +12,5 @@ configure_file("${PROJECT_SOURCE_DIR}/cmake/WintermuteConfigVersion.cmake.in"
 ## Installs
 install(FILES "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfig.cmake"
               "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfigVersion.cmake"
+              "${PROJECT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
         DESTINATION "${WINTER_CMAKE_DIR}")
